syntax="proto3";

option go_package = "car_legends/grpc";

service CarLegends {
  rpc AddCar(Car) returns (Empty) {}

  rpc GetCars(Empty) returns (CarList) {}

  rpc AddCars(stream Car) returns (Empty) {}
}

message Car {
  string manufacturer = 1;
  string model = 2;
  string year = 3;
  string notes = 4;
}

message CarList {
  repeated Car cars = 1;
}

message Empty {}